# frankos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flash.sh  memmap.ld.in  release.sh
api/: m-os-api-c-array.h  m-os-api-c-hash-i32.h  m-os-api-c-hash.h  m-os-api-c-list.h  m-os-api-c-string.h  m-os-api-cpp-alloc.h  m-os-api-cpp-psram.h  m-os-api-cpp-string.h  m-os-api-cpp-tuples.h  m-os-api-cpp-unique_ptr.h  m-os-api-cpp-unordered_set.h  m-os-api-cpp-vector.h  m-os-api-ff.h  m-os-api-gpio.h  m-os-api-math.c  m-os-api-sdtfn.c  m-os-api-tasks.h  m-os-api-timer.h  m-os-api.h
api/FreeRTOS/: task.h
api/libc/: ctype.h  getopt.h  libgen.h  math.h  stdio.h  stdlib.h  string.h
api/mos2/collections/: array.h  list.h
api/mos2/data/: c-string.h  sort.h
api/mos2/graphics/: console.h  draw.h  lines.h  schema.h
api/mos2/system/: cmd.h  ff.h  misc.h  nespad.h  rtos.h  terminal.h  time.h  usbd.h  ver.h
api/posix/: dirent.h  errno.h  poll.h  signal.h  spawn.h  unistd.h
api/posix/sys/: fcntl.h  ioctl.h  mman.h  stat.h  wait.h
apps/: CMakeLists.txt  build_apps.sh
apps/api/: frankos-app.h
apps/compiled/: digger  frankamp  frankamp.inf  minesweeper  minesweeper.inf  notepad  notepad.inf  pshell.inf  solitaire  solitaire.inf  zxspectrum  zxspectrum.inf
apps/source/basic/: frankos_main.c
apps/source/digger/: frankos_main.c  frankos_vid.c  gen_inf.py
apps/source/frankamp/: main.c
apps/source/minesweeper/: CMakeLists.txt  main.c
apps/source/notepad/: CMakeLists.txt  main.c
apps/source/pshell/: CMakeLists.txt.frankos  main.c  pshell_compat.c  pshell_compat.h  pshell_vt100.c  pshell_vt100.h  shell.c
apps/source/pshell/cc/: cc.c  cc_extrns.h
apps/source/pshell/misc/: readln.c  tar.c
apps/source/pshell/vi/: vi.c
apps/source/solitaire/: CMakeLists.txt  gen_inf.py  main.c  solitaire_icon.raw
apps/source/zxspectrum/: CMakeLists.txt  Z80.c  main.c  z80.h  z80_arm.S  z80_arm_config.h  zx-roms.h  zx.h
boards/: frank_m2.h  rhea_m2.h
drivers/fatfs/: CMakeLists.txt  ff.c  ff.h  ffconf.h  ffsystem.c
drivers/hdmi/: hdmi.c  hdmi.h
drivers/ps2/: CMakeLists.txt  ps2.c  ps2.h
drivers/ps2kbd/: CMakeLists.txt  ps2kbd_wrapper.cpp  ps2kbd_wrapper.h
drivers/psram/: psram.c  psram.h  psram_init.c  psram_init.h
drivers/sdcard/: sdcard.c  sdcard.cmake  sdcard.h
lib/opl/: emu8950.c  midi_opl.c  midifile.c  opl_alloc.h
sdcard/fos/: basic.elf  basic.inf  minesweeper.inf  zxspectrum  zxspectrum.elf  zxspectrum.inf
sdcard/mos/: README.md  basic  cmd  config.sys  dhrystone  linpack  linpackd  mc  mem  mp3wav  psram  sram  swap  test  whetstone
src/: FreeRTOSConfig.h  alttab.c  alttab.h  app.c  app.h  audio.c  audio.h  board_config.h  clipboard.c  clipboard.h  cmd.c  cmd.h  config.h  controls.c  controls.h  cursor.c  cursor.h  default_icon.c  desktop.c  desktop.h  dialog.c  dialog.h  dialog_icons.c  display.c  display.h  elf32.h  file_assoc.c  file_assoc.h  file_dialog.c  file_dialog.h  filemanager.c  filemanager.h  find_dialog.c  find_dialog.h  fn_icons.c  font.c  font.h  font8x16.c  font8x8.c  font_ui.c  (+54 more)
src/musl/: __fgetc.c  __fgets.c  __fputc.c  __fread.c  __fseek.c  __fwrite.c  __getopt.c  __libgen.c  __lockfile.c  __malloc.c  __randname.c  __scanf.c  __stdio_close.c  __stdio_exit.c  __stdio_read.c  __stdio_seek.c  __stdio_write.c  __stdout_write.c  __toread.c  __towrite.c  __vfprintf.c  fclose.c  fflush.c  fopen.c  lseek.c  ofl.c  pthread.c  realpath.c  stderr.c  stdin.c  stdout.c
src/musl/include/: __getopt.h  __libgen.h  __stdio.h  __stdlib.h
src/musl/internal/: __getopt.h  __stdio.h  __stdlib.h  lock.h  pthread_impl.h  stdio_impl.h
src/obsd/: fts.c
src/obsd/include/: fts.h
src/posix.1/: errno.c  exec.c  fcntl.c  poll.c
src/posix.1/include/: dirent.h  errno.h  poll.h  signal.h  spawn.h  unistd.h
src/posix.1/include/sys/: fcntl.h  ioctl.h  stat.h  wait.h
src/posix.1/sys/: ioctl.c
tools/: convert_ico.py  convert_ico_16.py  regen_inf.py
